layout(fix): fixing some layout issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -62,6 +62,10 @@ body {
   @apply mr-2 md:mr-4 mb-2 md:mb-4;
 }
 
+.connect-ul > li {
+  @apply mb-6 lg:mb-0;
+}
+
 @layer components {
   .bg-glass {
     @apply bg-opacity-25 backdrop-blur-sm shadow-glass rounded-lg bg-white p-4 border border-white border-opacity-20;
